--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -80,8 +80,8 @@
                     {% if site.xmpp %}<li>
                         <a href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i> XMPP</a>
                     </li>{% endif %}
-                    {% if site.hackernews %}<li>
-                        <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
+                    {% if site.velog %}<li>
+                        <a href="https://velog.io/{{ site.velog }}" target="_blank" rel="noopener noreferrer"> Velog</a>
                     </li>{% endif %}
 				</ul><!-- /.dl-submenu -->
 			</li>
